2011-10-06  Peter Bloomfield

	* src/folder-conf.c (folder_conf_imap_node),
	(folder_conf_imap_sub_node): migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/filter-edit-dialog.c (build_match_page),
	(fe_make_color_buttons), (build_action_page),
	(build_right_side): migrate from GtkTable to GtkGrid.

2011-10-06  Peter Bloomfield

	* src/filter-edit-callbacks.c (build_type_notebook): add a
	margin to notebook pages.

2011-10-06  Peter Bloomfield

	* src/filter-edit-callbacks.c (add_button), (add_check),
	(get_field_frame), (build_type_notebook): migrate from GtkTable
	to GtkGrid.

2011-10-05  Peter Bloomfield

	* src/balsa-mime-widget-vcalendar.c (balsa_vevent_widget):
	migrate from GtkTable to GtkGrid.

2011-10-05  Peter Bloomfield

	* src/address-book-config.c (create_gpe_dialog): build with GPE
	address book.

2011-10-05  Peter Bloomfield

	* src/balsa-mime-widget-text.c (bm_widget_new_vcard): make
	button span two columns, and left-align labels instead of right.

2011-10-04  Peter Bloomfield

	* src/balsa-mime-widget-text.c (bm_widget_new_vcard): migrate
	from GtkTable to GtkGrid.

2011-10-04  Peter Bloomfield

	* src/address-book-config.c (add_radio_buttons),
	(create_local_dialog), (create_externq_dialog),
	(create_ldap_dialog), (create_gpe_dialog): migrate from GtkTable
	to GtkGrid.

2011-10-04  Peter Bloomfield

	* src/ab-window.c (balsa_ab_window_init): migrate from GtkTable
	to GtkGrid.

2011-10-03  Peter Bloomfield

	Migrate from GtkTable to GtkGrid

	* libinit_balsa/assistant_helper.c (balsa_init_add_grid_entry),
	(balsa_init_add_grid_option), (balsa_init_add_grid_checkbox):
	* libinit_balsa/assistant_helper.h:
	* libinit_balsa/assistant_page_directory.c
	(balsa_druid_page_directory_init):
	* libinit_balsa/assistant_page_user.c (balsa_druid_page_user_init):

2011-10-03  Peter Bloomfield

	* libbalsa/smtp-server.c (smtp_server_add_widget),
	(libbalsa_smtp_server_dialog): migrate from GtkTable to GtkGrid.

2011-10-03  Peter Bloomfield
